[package]
name = "voip-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
packets = { path = "./packets" }
bincode = "1.3.3"
rmp = "0.8"
rmp-serde = "1.1.1"