[package]
name = "voip-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
bincode = "1.3.3"
lazy_static = "1.4.0"
rxrust = "1.0.0-beta.0"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1.68"
packets = { path = "./packets" } 