[package]
name = "extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
opus = "0.3.0"
packets = { path = "../packets" }
tokio = { version = "1.27.0", features = ["full"] }
